--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
             rel="stylesheet"
             href="https://fonts.googleapis.com/css?family=Shrikhand"
         />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
+            href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
             rel="stylesheet"
-            href="https://fonts.googleapis.com/css?family=Roboto"
         />
         <script
             src="https://kit.fontawesome.com/1fc0fb7175.js"
@@ -53,13 +55,13 @@
             <ol>
                 <li>
                     <div class="engineNotice__li__icn">
-                        <i class="fas fa-mobile-screen-button"></i>
+                        <i class="fas fa-mobile-alt"></i>
                     </div>
                     Choisissez un restaurant
                 </li>
                 <li>
                     <div class="engineNotice__li__icn">
-                        <i class="fas fa-mobile-alt"></i>
+                        <i class="fas fa-list-ul"></i>
                     </div>
                     Composez votre menu
                 </li>
@@ -71,6 +73,43 @@
                 </li>
             </ol>
         </section>
-        <section class="restaurants"></section>
+
+        <section class="resto">
+            <h1>Restaurants</h1>
+            <div class="resto__item resto_new">
+                <a href="">
+                    <div class="resto__item__pic">
+                        <img
+                            src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                            alt=""
+                        />
+                        <div class="resto__item__pic__label">
+                            <span>Nouveau</span>
+                        </div>
+                    </div>
+                </a>
+
+                <div class="resto__item__bar">
+                    <a href="">
+                        <div class="resto__item__bar__infos">
+                            <h4 class="resto__item__bar__infos__name">
+                                La palette du goût
+                            </h4>
+                            <p class="resto__item__bar__infos__location">
+                                Ménilmontant
+                            </p>
+                        </div>
+                    </a>
+                    <div class="resto__item__bar__fav">
+                        <div class="resto__item__bar__fav__icn-unchecked">
+                            <i class="far fa-heart"></i>
+                        </div>
+                        <div class="resto__item__bar__fav__icn-checked">
+                            <i class="fas fa-heart"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </body>
 </html>
