--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <head>
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <title>OhMyFood - Réservation en ligne</title>
+        <title>Ohmyfood - Réservation en ligne</title>
         <meta name="description" content="" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="stylesheet" href="css/main.css" />
@@ -111,5 +111,26 @@
                 </div>
             </div>
         </section>
+        <footer class="footer">
+            <div class="footer__container">
+                <h2>ohmyfood</h2>
+                <ul>
+                    <li>
+                        <div class="footer__container__icn">
+                            <i class="fas fa-utensils"></i>
+                        </div>
+                        <a href="">Proposer un restaurant</a>
+                    </li>
+                    <li>
+                        <div class="footer__container__icn">
+                            <i class="fas fa-hands-helping"></i>
+                        </div>
+                        <a href="">Devenir partenaire</a>
+                    </li>
+                    <li><a href="">Mentions légales</a></li>
+                    <li><a href="">Contact</a></li>
+                </ul>
+            </div>
+        </footer>
     </body>
 </html>
