--- a/index.html
+++ b/index.html
@@ -110,6 +110,102 @@
                     </div>
                 </div>
             </div>
+            <div class="resto__item resto_new">
+                <a href="">
+                    <div class="resto__item__pic">
+                        <img
+                            src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+                            alt=""
+                        />
+                        <div class="resto__item__pic__label">
+                            <span>Nouveau</span>
+                        </div>
+                    </div>
+                </a>
+
+                <div class="resto__item__bar">
+                    <a href="">
+                        <div class="resto__item__bar__infos">
+                            <h4 class="resto__item__bar__infos__name">
+                                La note enchantée
+                            </h4>
+                            <p class="resto__item__bar__infos__location">
+                                Charonne
+                            </p>
+                        </div>
+                    </a>
+                    <div class="resto__item__bar__fav">
+                        <div class="resto__item__bar__fav__icn-unchecked">
+                            <i class="far fa-heart"></i>
+                        </div>
+                        <div class="resto__item__bar__fav__icn-checked">
+                            <i class="fas fa-heart"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="resto__item">
+                <a href="">
+                    <div class="resto__item__pic">
+                        <img
+                            src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+                            alt=""
+                        />
+                    </div>
+                </a>
+
+                <div class="resto__item__bar">
+                    <a href="">
+                        <div class="resto__item__bar__infos">
+                            <h4 class="resto__item__bar__infos__name">
+                                À la française
+                            </h4>
+                            <p class="resto__item__bar__infos__location">
+                                Cité Rouge
+                            </p>
+                        </div>
+                    </a>
+                    <div class="resto__item__bar__fav">
+                        <div class="resto__item__bar__fav__icn-unchecked">
+                            <i class="far fa-heart"></i>
+                        </div>
+                        <div class="resto__item__bar__fav__icn-checked">
+                            <i class="fas fa-heart"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="resto__item">
+                <a href="">
+                    <div class="resto__item__pic">
+                        <img
+                            src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                            alt=""
+                        />
+                    </div>
+                </a>
+
+                <div class="resto__item__bar">
+                    <a href="">
+                        <div class="resto__item__bar__infos">
+                            <h4 class="resto__item__bar__infos__name">
+                                Le délice des sens
+                            </h4>
+                            <p class="resto__item__bar__infos__location">
+                                Folie-Méricourt
+                            </p>
+                        </div>
+                    </a>
+                    <div class="resto__item__bar__fav">
+                        <div class="resto__item__bar__fav__icn-unchecked">
+                            <i class="far fa-heart"></i>
+                        </div>
+                        <div class="resto__item__bar__fav__icn-checked">
+                            <i class="fas fa-heart"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
         <footer class="footer">
             <div class="footer__container">
