--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         ></script>
     </head>
     <body>
-        <header>
+        <header class="header">
             <div class="header__btn-back">
                 <a href="#"><img src="images/fleche_gauche.png" alt="" /></a>
             </div>
@@ -77,7 +77,7 @@
         <section class="resto">
             <h1>Restaurants</h1>
             <div class="resto__item resto_new">
-                <a href="">
+                <a href="la-palette-du-gout.html">
                     <div class="resto__item__pic">
                         <img
                             src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
