--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                             <i class="far fa-heart"></i>
                         </div>
                         <div class="resto__item__bar__fav__icn-checked">
-                            <i class="fas fa-heart"></i>
+                            <i class="fas fa-heart gradientIcon"></i>
                         </div>
                     </div>
                 </div>
@@ -139,7 +139,7 @@
                             <i class="far fa-heart"></i>
                         </div>
                         <div class="resto__item__bar__fav__icn-checked">
-                            <i class="fas fa-heart"></i>
+                            <i class="fas fa-heart gradientIcon"></i>
                         </div>
                     </div>
                 </div>
@@ -170,7 +170,7 @@
                             <i class="far fa-heart"></i>
                         </div>
                         <div class="resto__item__bar__fav__icn-checked">
-                            <i class="fas fa-heart"></i>
+                            <i class="fas fa-heart gradientIcon"></i>
                         </div>
                     </div>
                 </div>
@@ -201,7 +201,7 @@
                             <i class="far fa-heart"></i>
                         </div>
                         <div class="resto__item__bar__fav__icn-checked">
-                            <i class="fas fa-heart"></i>
+                            <i class="fas fa-heart gradientIcon"></i>
                         </div>
                     </div>
                 </div>
@@ -224,7 +224,7 @@
                         <a href="">Devenir partenaire</a>
                     </li>
                     <li><a href="">Mentions légales</a></li>
-                    <li><a href="">Contact</a></li>
+                    <li><a href="mailto:contact@ohmyfood.com">Contact</a></li>
                 </ul>
             </div>
         </footer>
