--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -52,15 +52,16 @@
             </div>
         </div>
         <main class="menu">
-            <section class="menu__starter">
+            <section class="menu__sub">
                 <h4>Entrées</h4>
+                <div class="menu__sub__line"></div>
                 <ul>
                     <li class="menuItem time-1">
-                        <div class="menu__starter__name">
+                        <div class="menu__sub__name">
                             <h4>Fricassée d'escargot</h4>
                             <span>Au piment d'espelette</span>
                         </div>
-                        <div class="menu__starter__price">
+                        <div class="menu__sub__price">
                             <span>25€</span>
                         </div>
                         <div class="menuItem__confirmation">
@@ -70,11 +71,11 @@
                         </div>
                     </li>
                     <li class="menuItem time-2">
-                        <div class="menu__starter__name">
+                        <div class="menu__sub__name">
                             <h4>Foie gras de canard mi-cuit</h4>
                             <span>Et ses copeaux de truffe noire</span>
                         </div>
-                        <div class="menu__starter__price">
+                        <div class="menu__sub__price">
                             <span>35€</span>
                         </div>
                         <div class="menuItem__confirmation">
@@ -84,13 +85,13 @@
                         </div>
                     </li>
                     <li class="menuItem time-3">
-                        <div class="menu__starter__name">
+                        <div class="menu__sub__name">
                             <h4>Oeuf au plat</h4>
                             <span
                                 >Assaisonné à la truffe sur lit de caviar</span
                             >
                         </div>
-                        <div class="menu__starter__price">
+                        <div class="menu__sub__price">
                             <span>20€</span>
                         </div>
                         <div class="menuItem__confirmation">
@@ -101,6 +102,128 @@
                     </li>
                 </ul>
             </section>
+            <section class="subMenu menu__sub">
+                <h4>Plats</h4>
+                <div class="menu__sub__line"></div>
+                <ul>
+                    <li class="menuItem time-4">
+                        <div class="menu__sub__name">
+                            <h4>Filet de boeuf aux herbes</h4>
+                            <span>Accompagné de sa ribambelle de légumes</span>
+                        </div>
+                        <div class="menu__sub__price">
+                            <span>40€</span>
+                        </div>
+                        <div class="menuItem__confirmation">
+                            <div class="menuItem__wrapIcon">
+                                <i class="menuItem__icon fas fa-check"></i>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="menuItem time-5">
+                        <div class="menu__sub__name">
+                            <h4>Parmentier de queue de boeuf</h4>
+                            <span
+                                >À la truffe noire sur sa purée de panais</span
+                            >
+                        </div>
+                        <div class="menu__sub__price">
+                            <span>35€</span>
+                        </div>
+                        <div class="menuItem__confirmation">
+                            <div class="menuItem__wrapIcon">
+                                <i class="menuItem__icon fas fa-check"></i>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="menuItem time-6">
+                        <div class="menu__sub__name">
+                            <h4>Filet de turbot</h4>
+                            <span>Aux agrumes</span>
+                        </div>
+                        <div class="menu__sub__price">
+                            <span>44€</span>
+                        </div>
+                        <div class="menuItem__confirmation">
+                            <div class="menuItem__wrapIcon">
+                                <i class="menuItem__icon fas fa-check"></i>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </section>
+            <section class="subMenu menu__sub">
+                <h4>Desserts</h4>
+                <div class="menu__sub__line"></div>
+                <ul>
+                    <li class="menuItem time-7">
+                        <div class="menu__sub__name">
+                            <h4>Paris-Brest</h4>
+                            <span>Revisité</span>
+                        </div>
+                        <div class="menu__sub__price">
+                            <span>18€</span>
+                        </div>
+                        <div class="menuItem__confirmation">
+                            <div class="menuItem__wrapIcon">
+                                <i class="menuItem__icon fas fa-check"></i>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="menuItem time-8">
+                        <div class="menu__sub__name">
+                            <h4>Macaron au chocolat d'exception</h4>
+                            <span>Et glace à la vanille de Madagascar</span>
+                        </div>
+                        <div class="menu__sub__price">
+                            <span>22€</span>
+                        </div>
+                        <div class="menuItem__confirmation">
+                            <div class="menuItem__wrapIcon">
+                                <i class="menuItem__icon fas fa-check"></i>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="menuItem time-9">
+                        <div class="menu__sub__name">
+                            <h4>Mousse au chocolat</h4>
+                            <span
+                                >Au piment d'Espelette et à la truffe
+                                noire</span
+                            >
+                        </div>
+                        <div class="menu__sub__price">
+                            <span>23€</span>
+                        </div>
+                        <div class="menuItem__confirmation">
+                            <div class="menuItem__wrapIcon">
+                                <i class="menuItem__icon fas fa-check"></i>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </section>
         </main>
+        <footer class="footer">
+            <div class="footer__container">
+                <h2>ohmyfood</h2>
+                <ul>
+                    <li>
+                        <div class="footer__container__icn">
+                            <i class="fas fa-utensils"></i>
+                        </div>
+                        <a href="">Proposer un restaurant</a>
+                    </li>
+                    <li>
+                        <div class="footer__container__icn">
+                            <i class="fas fa-hands-helping"></i>
+                        </div>
+                        <a href="">Devenir partenaire</a>
+                    </li>
+                    <li><a href="">Mentions légales</a></li>
+                    <li><a href="mailto:contact@ohmyfood.com">Contact</a></li>
+                </ul>
+            </div>
+        </footer>
     </body>
 </html>
