Add "le délice des sens" & link on front

--- a/Le-delice-des-sens.html
+++ b/Le-delice-des-sens.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <title>Ohmyfood - La palette du goût - Réservation en ligne</title>
+        <title>Ohmyfood - Le délice des sens - Réservation en ligne</title>
         <meta name="description" content="" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="stylesheet" href="css/main.css" />
@@ -39,14 +39,14 @@
         <div class="restoMain">
             <div class="restoMain__pic">
                 <img
-                    src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
-                    alt=""
+                    src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                    alt="Le délice des sens"
                 />
                 <div class="restoMain__bottombar"></div>
             </div>
 
             <div class="restoMain__title">
-                <h1>La palette du goût</h1>
+                <h1>Le délice des sens</h1>
                 <i class="far fa-heart fa-lg"></i>
             </div>
         </div>
@@ -57,8 +57,8 @@
                 <ul>
                     <li class="menuItem time-1">
                         <div class="menu__sub__name">
-                            <h4>Fricassée d'escargot</h4>
-                            <span>Au piment d'espelette</span>
+                            <h4>Tartare de thon</h4>
+                            <span>Assaisonné au yuzu</span>
                         </div>
                         <div class="menu__sub__price">
                             <span>25€</span>
@@ -71,8 +71,8 @@
                     </li>
                     <li class="menuItem time-2">
                         <div class="menu__sub__name">
-                            <h4>Foie gras de canard mi-cuit</h4>
-                            <span>Et ses copeaux de truffe noire</span>
+                            <h4>Bouchée de homard croustillant</h4>
+                            <span>Et sa farandole de petits légumes</span>
                         </div>
                         <div class="menu__sub__price">
                             <span>35€</span>
@@ -85,10 +85,8 @@
                     </li>
                     <li class="menuItem time-3">
                         <div class="menu__sub__name">
-                            <h4>Oeuf au plat</h4>
-                            <span
-                                >Assaisonné à la truffe sur lit de caviar</span
-                            >
+                            <h4>Velouté de cèpes</h4>
+                            <span>Aux truffes</span>
                         </div>
                         <div class="menu__sub__price">
                             <span>20€</span>
@@ -107,8 +105,8 @@
                 <ul>
                     <li class="menuItem time-4">
                         <div class="menu__sub__name">
-                            <h4>Filet de boeuf aux herbes</h4>
-                            <span>Accompagné de sa ribambelle de légumes</span>
+                            <h4>Poulet rôti aux herbes de Provence</h4>
+                            <span>Et sa crème de truffe</span>
                         </div>
                         <div class="menu__sub__price">
                             <span>40€</span>
@@ -121,10 +119,8 @@
                     </li>
                     <li class="menuItem time-5">
                         <div class="menu__sub__name">
-                            <h4>Parmentier de queue de boeuf</h4>
-                            <span
-                                >À la truffe noire sur sa purée de panais</span
-                            >
+                            <h4>Langouste rôtie</h4>
+                            <span>Et ses légumes de saison</span>
                         </div>
                         <div class="menu__sub__price">
                             <span>35€</span>
@@ -137,8 +133,8 @@
                     </li>
                     <li class="menuItem time-6">
                         <div class="menu__sub__name">
-                            <h4>Filet de turbot</h4>
-                            <span>Aux agrumes</span>
+                            <h4>Côte de boeuf Angus</h4>
+                            <span>Et sa purée de panais</span>
                         </div>
                         <div class="menu__sub__price">
                             <span>44€</span>
@@ -157,8 +153,8 @@
                 <ul>
                     <li class="menuItem time-7">
                         <div class="menu__sub__name">
-                            <h4>Paris-Brest</h4>
-                            <span>Revisité</span>
+                            <h4>Farandole de desserts</h4>
+                            <span>Du chef</span>
                         </div>
                         <div class="menu__sub__price">
                             <span>18€</span>
@@ -171,8 +167,8 @@
                     </li>
                     <li class="menuItem time-8">
                         <div class="menu__sub__name">
-                            <h4>Macaron au chocolat d'exception</h4>
-                            <span>Et glace à la vanille de Madagascar</span>
+                            <h4>Crème brulée</h4>
+                            <span>Revisitée</span>
                         </div>
                         <div class="menu__sub__price">
                             <span>22€</span>
@@ -185,11 +181,8 @@
                     </li>
                     <li class="menuItem time-9">
                         <div class="menu__sub__name">
-                            <h4>Mousse au chocolat</h4>
-                            <span
-                                >Au piment d'Espelette et à la truffe
-                                noire</span
-                            >
+                            <h4>Tiramisu</h4>
+                            <span>À la noisette</span>
                         </div>
                         <div class="menu__sub__price">
                             <span>23€</span>
