--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
 <html>
     <head>
         <meta charset="utf-8" />
@@ -29,9 +28,6 @@
     </head>
     <body>
         <header class="header">
-            <div class="header__btn-back">
-                <a href="#"><img src="images/fleche_gauche.png" alt="" /></a>
-            </div>
             <div class="header__logo">
                 <img src="images/logo/ohmyfood.png" alt="" />
             </div>
@@ -90,7 +86,7 @@
                 </a>
 
                 <div class="resto__item__bar">
-                    <a href="">
+                    <a href="la-palette-du-gout.html">
                         <div class="resto__item__bar__infos">
                             <h4 class="resto__item__bar__infos__name">
                                 La palette du goût
@@ -111,7 +107,7 @@
                 </div>
             </div>
             <div class="resto__item resto_new">
-                <a href="">
+                <a href="la-note-enchantee.html">
                     <div class="resto__item__pic">
                         <img
                             src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
@@ -124,7 +120,7 @@
                 </a>
 
                 <div class="resto__item__bar">
-                    <a href="">
+                    <a href="la-note-enchantee.html">
                         <div class="resto__item__bar__infos">
                             <h4 class="resto__item__bar__infos__name">
                                 La note enchantée
@@ -145,7 +141,7 @@
                 </div>
             </div>
             <div class="resto__item">
-                <a href="">
+                <a href="a-la-française.html">
                     <div class="resto__item__pic">
                         <img
                             src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
@@ -155,7 +151,7 @@
                 </a>
 
                 <div class="resto__item__bar">
-                    <a href="">
+                    <a href="a-la-française.html">
                         <div class="resto__item__bar__infos">
                             <h4 class="resto__item__bar__infos__name">
                                 À la française
@@ -176,7 +172,7 @@
                 </div>
             </div>
             <div class="resto__item">
-                <a href="">
+                <a href="Le-delice-des-sens.html">
                     <div class="resto__item__pic">
                         <img
                             src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
@@ -186,7 +182,7 @@
                 </a>
 
                 <div class="resto__item__bar">
-                    <a href="">
+                    <a href="Le-delice-des-sens.html">
                         <div class="resto__item__bar__infos">
                             <h4 class="resto__item__bar__infos__name">
                                 Le délice des sens
