add "loader" on homepage

--- a/index.html
+++ b/index.html
@@ -27,13 +27,22 @@
         ></script>
     </head>
     <body>
+        <!-- Loader -->
+        <div class="loader">
+            <div class="loader__brand">
+                <span>Ohmyfood</span>
+                <i class="fas fa-utensils"></i>
+            </div>
+            <div class="loader__spinner"></div>
+            <div class="loader__icn"></div>
+        </div>
         <header class="header">
             <div class="header__logo">
                 <img src="images/logo/ohmyfood.png" alt="" />
             </div>
         </header>
         <div class="cityMapping">
-            <i></i>
+            <i class="fas fa-map-marker-alt"></i>
             <p>Paris, Belleville</p>
         </div>
         <div class="cityOptions">
