Heart hover color + loader color

--- a/index.html
+++ b/index.html
@@ -36,11 +36,13 @@
             <div class="loader__spinner"></div>
             <div class="loader__icn"></div>
         </div>
+        <!-- Header -->
         <header class="header">
             <div class="header__logo">
                 <img src="images/logo/ohmyfood.png" alt="" />
             </div>
         </header>
+        <!-- main -->
         <div class="cityMapping">
             <i class="fas fa-map-marker-alt"></i>
             <p>Paris, Belleville</p>
@@ -106,11 +108,8 @@
                         </div>
                     </a>
                     <div class="resto__item__bar__fav">
-                        <div class="resto__item__bar__fav__icn-unchecked">
-                            <i class="far fa-heart"></i>
-                        </div>
-                        <div class="resto__item__bar__fav__icn-checked">
-                            <i class="fas fa-heart gradientIcon"></i>
+                        <div class="resto__item__bar__fav__icn">
+                            <i class="gradientIcon far fa-heart"></i>
                         </div>
                     </div>
                 </div>
@@ -140,11 +139,8 @@
                         </div>
                     </a>
                     <div class="resto__item__bar__fav">
-                        <div class="resto__item__bar__fav__icn-unchecked">
-                            <i class="far fa-heart"></i>
-                        </div>
-                        <div class="resto__item__bar__fav__icn-checked">
-                            <i class="fas fa-heart gradientIcon"></i>
+                        <div class="resto__item__bar__fav__icn">
+                            <i class="gradientIcon far fa-heart"></i>
                         </div>
                     </div>
                 </div>
@@ -171,11 +167,8 @@
                         </div>
                     </a>
                     <div class="resto__item__bar__fav">
-                        <div class="resto__item__bar__fav__icn-unchecked">
-                            <i class="far fa-heart"></i>
-                        </div>
-                        <div class="resto__item__bar__fav__icn-checked">
-                            <i class="fas fa-heart gradientIcon"></i>
+                        <div class="resto__item__bar__fav__icn">
+                            <i class="gradientIcon far fa-heart"></i>
                         </div>
                     </div>
                 </div>
@@ -202,16 +195,14 @@
                         </div>
                     </a>
                     <div class="resto__item__bar__fav">
-                        <div class="resto__item__bar__fav__icn-unchecked">
-                            <i class="far fa-heart"></i>
-                        </div>
-                        <div class="resto__item__bar__fav__icn-checked">
-                            <i class="fas fa-heart gradientIcon"></i>
+                        <div class="resto__item__bar__fav__icn">
+                            <i class="gradientIcon far fa-heart"></i>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
+        <!-- footer -->
         <footer class="footer">
             <div class="footer__container">
                 <h2>ohmyfood</h2>
