--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -47,7 +47,7 @@
 
             <div class="restoMain__title">
                 <h1>La palette du goût</h1>
-                <i class="far fa-heart fa-lg"></i>
+                <i class="far fa-heart gradientIcon"></i>
             </div>
         </div>
         <main class="menu">
