--- a/Le-delice-des-sens.html
+++ b/Le-delice-des-sens.html
@@ -1,7 +1,4 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <html>
     <head>
         <meta charset="utf-8" />
@@ -30,7 +27,7 @@
     <body>
         <header class="header">
             <div class="header__btn-back">
-                <a href="./"><img src="images/fleche_gauche.png" alt="" /></a>
+                <a href="./"><i class="fas fa-arrow-left"></i></a>
             </div>
             <div class="header__logo">
                 <img src="images/logo/ohmyfood.png" alt="Ohmyfood" />
