--- a/Le-delice-des-sens.html
+++ b/Le-delice-des-sens.html
@@ -8,7 +8,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="stylesheet" href="css/main.css" />
         <link rel="stylesheet" href="css/pages.css" />
-
         <link
             rel="stylesheet"
             href="https://fonts.googleapis.com/css?family=Shrikhand"
@@ -48,151 +47,155 @@
             </div>
         </div>
         <main class="menu">
-            <section class="menu__sub">
-                <h4>Entrées</h4>
-                <div class="menu__sub__line"></div>
-                <ul>
-                    <li class="menuItem time-1">
-                        <div class="menu__sub__name">
-                            <h4>Tartare de thon</h4>
-                            <span>Assaisonné au yuzu</span>
-                        </div>
-                        <div class="menu__sub__price">
-                            <span>25€</span>
-                        </div>
-                        <div class="menuItem__confirmation">
-                            <div class="menuItem__wrapIcon">
-                                <i class="menuItem__icon fas fa-check"></i>
+            <div class="menu__wrap">
+                <section class="menu__wrap__sub">
+                    <h4>Entrées</h4>
+                    <div class="menu__wrap__sub__line"></div>
+                    <ul>
+                        <li class="menuItem time-1">
+                            <div class="menu__wrap__sub__name">
+                                <h4>Tartare de thon</h4>
+                                <span>Assaisonné au yuzu</span>
                             </div>
-                        </div>
-                    </li>
-                    <li class="menuItem time-2">
-                        <div class="menu__sub__name">
-                            <h4>Bouchée de homard croustillant</h4>
-                            <span>Et sa farandole de petits légumes</span>
-                        </div>
-                        <div class="menu__sub__price">
-                            <span>35€</span>
-                        </div>
-                        <div class="menuItem__confirmation">
-                            <div class="menuItem__wrapIcon">
-                                <i class="menuItem__icon fas fa-check"></i>
+                            <div class="menu__wrap__sub__price">
+                                <span>25€</span>
                             </div>
-                        </div>
-                    </li>
-                    <li class="menuItem time-3">
-                        <div class="menu__sub__name">
-                            <h4>Velouté de cèpes</h4>
-                            <span>Aux truffes</span>
-                        </div>
-                        <div class="menu__sub__price">
-                            <span>20€</span>
-                        </div>
-                        <div class="menuItem__confirmation">
-                            <div class="menuItem__wrapIcon">
-                                <i class="menuItem__icon fas fa-check"></i>
+                            <div class="menuItem__confirmation">
+                                <div class="menuItem__wrapIcon">
+                                    <i class="menuItem__icon fas fa-check"></i>
+                                </div>
                             </div>
-                        </div>
-                    </li>
-                </ul>
-            </section>
-            <section class="subMenu menu__sub">
-                <h4>Plats</h4>
-                <div class="menu__sub__line"></div>
-                <ul>
-                    <li class="menuItem time-4">
-                        <div class="menu__sub__name">
-                            <h4>Poulet rôti aux herbes de Provence</h4>
-                            <span>Et sa crème de truffe</span>
-                        </div>
-                        <div class="menu__sub__price">
-                            <span>40€</span>
-                        </div>
-                        <div class="menuItem__confirmation">
-                            <div class="menuItem__wrapIcon">
-                                <i class="menuItem__icon fas fa-check"></i>
+                        </li>
+                        <li class="menuItem time-2">
+                            <div class="menu__wrap__sub__name">
+                                <h4>Bouchée de homard croustillant</h4>
+                                <span>Et sa farandole de petits légumes</span>
                             </div>
-                        </div>
-                    </li>
-                    <li class="menuItem time-5">
-                        <div class="menu__sub__name">
-                            <h4>Langouste rôtie</h4>
-                            <span>Et ses légumes de saison</span>
-                        </div>
-                        <div class="menu__sub__price">
-                            <span>35€</span>
-                        </div>
-                        <div class="menuItem__confirmation">
-                            <div class="menuItem__wrapIcon">
-                                <i class="menuItem__icon fas fa-check"></i>
+                            <div class="menu__wrap__sub__price">
+                                <span>35€</span>
                             </div>
-                        </div>
-                    </li>
-                    <li class="menuItem time-6">
-                        <div class="menu__sub__name">
-                            <h4>Côte de boeuf Angus</h4>
-                            <span>Et sa purée de panais</span>
-                        </div>
-                        <div class="menu__sub__price">
-                            <span>44€</span>
-                        </div>
-                        <div class="menuItem__confirmation">
-                            <div class="menuItem__wrapIcon">
-                                <i class="menuItem__icon fas fa-check"></i>
+                            <div class="menuItem__confirmation">
+                                <div class="menuItem__wrapIcon">
+                                    <i class="menuItem__icon fas fa-check"></i>
+                                </div>
                             </div>
-                        </div>
-                    </li>
-                </ul>
-            </section>
-            <section class="subMenu menu__sub">
-                <h4>Desserts</h4>
-                <div class="menu__sub__line"></div>
-                <ul>
-                    <li class="menuItem time-7">
-                        <div class="menu__sub__name">
-                            <h4>Farandole de desserts</h4>
-                            <span>Du chef</span>
-                        </div>
-                        <div class="menu__sub__price">
-                            <span>18€</span>
-                        </div>
-                        <div class="menuItem__confirmation">
-                            <div class="menuItem__wrapIcon">
-                                <i class="menuItem__icon fas fa-check"></i>
+                        </li>
+                        <li class="menuItem time-3">
+                            <div class="menu__wrap__sub__name">
+                                <h4>Velouté de cèpes</h4>
+                                <span>Aux truffes</span>
                             </div>
-                        </div>
-                    </li>
-                    <li class="menuItem time-8">
-                        <div class="menu__sub__name">
-                            <h4>Crème brulée</h4>
-                            <span>Revisitée</span>
-                        </div>
-                        <div class="menu__sub__price">
-                            <span>22€</span>
-                        </div>
-                        <div class="menuItem__confirmation">
-                            <div class="menuItem__wrapIcon">
-                                <i class="menuItem__icon fas fa-check"></i>
+                            <div class="menu__wrap__sub__price">
+                                <span>20€</span>
                             </div>
-                        </div>
-                    </li>
-                    <li class="menuItem time-9">
-                        <div class="menu__sub__name">
-                            <h4>Tiramisu</h4>
-                            <span>À la noisette</span>
-                        </div>
-                        <div class="menu__sub__price">
-                            <span>23€</span>
-                        </div>
-                        <div class="menuItem__confirmation">
-                            <div class="menuItem__wrapIcon">
-                                <i class="menuItem__icon fas fa-check"></i>
+                            <div class="menuItem__confirmation">
+                                <div class="menuItem__wrapIcon">
+                                    <i class="menuItem__icon fas fa-check"></i>
+                                </div>
                             </div>
-                        </div>
-                    </li>
-                </ul>
-            </section>
+                        </li>
+                    </ul>
+                </section>
+                <section class="subMenu menu__wrap__sub">
+                    <h4>Plats</h4>
+                    <div class="menu__wrap__sub__line"></div>
+                    <ul>
+                        <li class="menuItem time-4">
+                            <div class="menu__wrap__sub__name">
+                                <h4>Poulet rôti aux herbes de Provence</h4>
+                                <span>Et sa crème de truffe </span>
+                            </div>
+                            <div class="menu__wrap__sub__price">
+                                <span>40€</span>
+                            </div>
+                            <div class="menuItem__confirmation">
+                                <div class="menuItem__wrapIcon">
+                                    <i class="menuItem__icon fas fa-check"></i>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="menuItem time-5">
+                            <div class="menu__wrap__sub__name">
+                                <h4>Langouste rôtie</h4>
+                                <span>Et ses légumes de saison </span>
+                            </div>
+                            <div class="menu__wrap__sub__price">
+                                <span>35€</span>
+                            </div>
+                            <div class="menuItem__confirmation">
+                                <div class="menuItem__wrapIcon">
+                                    <i class="menuItem__icon fas fa-check"></i>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="menuItem time-6">
+                            <div class="menu__wrap__sub__name">
+                                <h4>Côte de boeuf Angus</h4>
+                                <span>Et sa purée de panais </span>
+                            </div>
+                            <div class="menu__wrap__sub__price">
+                                <span>44€</span>
+                            </div>
+                            <div class="menuItem__confirmation">
+                                <div class="menuItem__wrapIcon">
+                                    <i class="menuItem__icon fas fa-check"></i>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </section>
+                <section class="subMenu menu__wrap__sub">
+                    <h4>Desserts</h4>
+                    <div class="menu__wrap__sub__line"></div>
+                    <ul>
+                        <li class="menuItem time-7">
+                            <div class="menu__wrap__sub__name">
+                                <h4>Farandole de desserts</h4>
+                                <span>Du chef </span>
+                            </div>
+                            <div class="menu__wrap__sub__price">
+                                <span>18€</span>
+                            </div>
+                            <div class="menuItem__confirmation">
+                                <div class="menuItem__wrapIcon">
+                                    <i class="menuItem__icon fas fa-check"></i>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="menuItem time-8">
+                            <div class="menu__wrap__sub__name">
+                                <h4>Crème brulée</h4>
+                                <span>Revisitée </span>
+                            </div>
+                            <div class="menu__wrap__sub__price">
+                                <span>22€</span>
+                            </div>
+                            <div class="menuItem__confirmation">
+                                <div class="menuItem__wrapIcon">
+                                    <i class="menuItem__icon fas fa-check"></i>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="menuItem time-9">
+                            <div class="menu__wrap__sub__name">
+                                <h4>Tiramisu</h4>
+                                <span>À la noisette </span>
+                            </div>
+                            <div class="menu__wrap__sub__price">
+                                <span>23€</span>
+                            </div>
+                            <div class="menuItem__confirmation">
+                                <div class="menuItem__wrapIcon">
+                                    <i class="menuItem__icon fas fa-check"></i>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </section>
+            </div>
+            <button class="" type="button">Commandez</button>
         </main>
+
         <footer class="footer">
             <div class="footer__container">
                 <h2>ohmyfood</h2>
