--- a/a-la-française.html
+++ b/a-la-française.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <title>Ohmyfood - La palette du goût - Réservation en ligne</title>
+        <title>Ohmyfood - À la française - Réservation en ligne</title>
         <meta name="description" content="" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="stylesheet" href="css/main.css" />
@@ -48,151 +48,157 @@
             </div>
         </div>
         <main class="menu">
-            <section class="menu__sub">
-                <h4>Entrées</h4>
-                <div class="menu__sub__line"></div>
-                <ul>
-                    <li class="menuItem time-1">
-                        <div class="menu__sub__name">
-                            <h4>Tartare de poulpe acidulé</h4>
-                            <span>Aux zestes d'orange</span>
-                        </div>
-                        <div class="menu__sub__price">
-                            <span>25€</span>
-                        </div>
-                        <div class="menuItem__confirmation">
-                            <div class="menuItem__wrapIcon">
-                                <i class="menuItem__icon fas fa-check"></i>
+            <div class="menu__wrap">
+                <section class="menu__wrap__sub">
+                    <h4>Entrées</h4>
+                    <div class="menu__wrap__sub__line"></div>
+                    <ul>
+                        <li class="menuItem time-1">
+                            <div class="menu__wrap__sub__name">
+                                <h4>Tartare de poulpe acidulé</h4>
+                                <span>Aux zestes d'orange </span>
                             </div>
-                        </div>
-                    </li>
-                    <li class="menuItem time-2">
-                        <div class="menu__sub__name">
-                            <h4>Velouté de légumes d'antan</h4>
-                            <span>Carotte, panais, topinambour</span>
-                        </div>
-                        <div class="menu__sub__price">
-                            <span>35€</span>
-                        </div>
-                        <div class="menuItem__confirmation">
-                            <div class="menuItem__wrapIcon">
-                                <i class="menuItem__icon fas fa-check"></i>
+                            <div class="menu__wrap__sub__price">
+                                <span>25€</span>
                             </div>
-                        </div>
-                    </li>
-                    <li class="menuItem time-3">
-                        <div class="menu__sub__name">
-                            <h4>Soupe à l'oignon</h4>
-                            <span>Revisitée</span>
-                        </div>
-                        <div class="menu__sub__price">
-                            <span>20€</span>
-                        </div>
-                        <div class="menuItem__confirmation">
-                            <div class="menuItem__wrapIcon">
-                                <i class="menuItem__icon fas fa-check"></i>
+                            <div class="menuItem__confirmation">
+                                <div class="menuItem__wrapIcon">
+                                    <i class="menuItem__icon fas fa-check"></i>
+                                </div>
                             </div>
-                        </div>
-                    </li>
-                </ul>
-            </section>
-            <section class="subMenu menu__sub">
-                <h4>Plats</h4>
-                <div class="menu__sub__line"></div>
-                <ul>
-                    <li class="menuItem time-4">
-                        <div class="menu__sub__name">
-                            <h4>Coquilles Saint-Jacques</h4>
-                            <span>Accompagnées d'une purée de panais</span>
-                        </div>
-                        <div class="menu__sub__price">
-                            <span>40€</span>
-                        </div>
-                        <div class="menuItem__confirmation">
-                            <div class="menuItem__wrapIcon">
-                                <i class="menuItem__icon fas fa-check"></i>
+                        </li>
+                        <li class="menuItem time-2">
+                            <div class="menu__wrap__sub__name">
+                                <h4>Velouté de légumes d'antan</h4>
+                                <span>Carotte, panais, topinambour </span>
                             </div>
-                        </div>
-                    </li>
-                    <li class="menuItem time-5">
-                        <div class="menu__sub__name">
-                            <h4>Magret de canard</h4>
-                            <span>Et parmentier de pommes de terre</span>
-                        </div>
-                        <div class="menu__sub__price">
-                            <span>35€</span>
-                        </div>
-                        <div class="menuItem__confirmation">
-                            <div class="menuItem__wrapIcon">
-                                <i class="menuItem__icon fas fa-check"></i>
+                            <div class="menu__wrap__sub__price">
+                                <span>35€</span>
                             </div>
-                        </div>
-                    </li>
-                    <li class="menuItem time-6">
-                        <div class="menu__sub__name">
-                            <h4>Pigeonneau d’Ille-et-Vilaine</h4>
-                            <span>Sur son lit de gnocchis aux légumes</span>
-                        </div>
-                        <div class="menu__sub__price">
-                            <span>44€</span>
-                        </div>
-                        <div class="menuItem__confirmation">
-                            <div class="menuItem__wrapIcon">
-                                <i class="menuItem__icon fas fa-check"></i>
+                            <div class="menuItem__confirmation">
+                                <div class="menuItem__wrapIcon">
+                                    <i class="menuItem__icon fas fa-check"></i>
+                                </div>
                             </div>
-                        </div>
-                    </li>
-                </ul>
-            </section>
-            <section class="subMenu menu__sub">
-                <h4>Desserts</h4>
-                <div class="menu__sub__line"></div>
-                <ul>
-                    <li class="menuItem time-7">
-                        <div class="menu__sub__name">
-                            <h4>Pétales de violettes glacés</h4>
-                            <span>Et purée de noisettes</span>
-                        </div>
-                        <div class="menu__sub__price">
-                            <span>18€</span>
-                        </div>
-                        <div class="menuItem__confirmation">
-                            <div class="menuItem__wrapIcon">
-                                <i class="menuItem__icon fas fa-check"></i>
+                        </li>
+                        <li class="menuItem time-3">
+                            <div class="menu__wrap__sub__name">
+                                <h4>Soupe à l'oignon</h4>
+                                <span>Revisitée</span>
                             </div>
-                        </div>
-                    </li>
-                    <li class="menuItem time-8">
-                        <div class="menu__sub__name">
-                            <h4>Fondant au chocolat</h4>
-                            <span>Revisité</span>
-                        </div>
-                        <div class="menu__sub__price">
-                            <span>22€</span>
-                        </div>
-                        <div class="menuItem__confirmation">
-                            <div class="menuItem__wrapIcon">
-                                <i class="menuItem__icon fas fa-check"></i>
+                            <div class="menu__wrap__sub__price">
+                                <span>20€</span>
                             </div>
-                        </div>
-                    </li>
-                    <li class="menuItem time-9">
-                        <div class="menu__sub__name">
-                            <h4>Millefeuille croustillant</h4>
-                            <span>Myrtilles et pâte d’amande</span>
-                        </div>
-                        <div class="menu__sub__price">
-                            <span>23€</span>
-                        </div>
-                        <div class="menuItem__confirmation">
-                            <div class="menuItem__wrapIcon">
-                                <i class="menuItem__icon fas fa-check"></i>
+                            <div class="menuItem__confirmation">
+                                <div class="menuItem__wrapIcon">
+                                    <i class="menuItem__icon fas fa-check"></i>
+                                </div>
                             </div>
-                        </div>
-                    </li>
-                </ul>
-            </section>
+                        </li>
+                    </ul>
+                </section>
+                <section class="subMenu menu__wrap__sub">
+                    <h4>Plats</h4>
+                    <div class="menu__wrap__sub__line"></div>
+                    <ul>
+                        <li class="menuItem time-4">
+                            <div class="menu__wrap__sub__name">
+                                <h4>Coquilles Saint-Jacques</h4>
+                                <span>Accompagnées d'une purée de panais </span>
+                            </div>
+                            <div class="menu__wrap__sub__price">
+                                <span>40€</span>
+                            </div>
+                            <div class="menuItem__confirmation">
+                                <div class="menuItem__wrapIcon">
+                                    <i class="menuItem__icon fas fa-check"></i>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="menuItem time-5">
+                            <div class="menu__wrap__sub__name">
+                                <h4>Magret de canard</h4>
+                                <span>Et parmentier de pommes de terre </span>
+                            </div>
+                            <div class="menu__wrap__sub__price">
+                                <span>35€</span>
+                            </div>
+                            <div class="menuItem__confirmation">
+                                <div class="menuItem__wrapIcon">
+                                    <i class="menuItem__icon fas fa-check"></i>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="menuItem time-6">
+                            <div class="menu__wrap__sub__name">
+                                <h4>Pigeonneau d’Ille-et-Vilaine</h4>
+                                <span
+                                    >Sur son lit de gnocchis aux légumes
+                                </span>
+                            </div>
+                            <div class="menu__wrap__sub__price">
+                                <span>44€</span>
+                            </div>
+                            <div class="menuItem__confirmation">
+                                <div class="menuItem__wrapIcon">
+                                    <i class="menuItem__icon fas fa-check"></i>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </section>
+                <section class="subMenu menu__wrap__sub">
+                    <h4>Desserts</h4>
+                    <div class="menu__wrap__sub__line"></div>
+                    <ul>
+                        <li class="menuItem time-7">
+                            <div class="menu__wrap__sub__name">
+                                <h4>Pétales de violettes glacés</h4>
+                                <span>Et purée de noisettes </span>
+                            </div>
+                            <div class="menu__wrap__sub__price">
+                                <span>18€</span>
+                            </div>
+                            <div class="menuItem__confirmation">
+                                <div class="menuItem__wrapIcon">
+                                    <i class="menuItem__icon fas fa-check"></i>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="menuItem time-8">
+                            <div class="menu__wrap__sub__name">
+                                <h4>Fondant au chocolat</h4>
+                                <span>Revisité</span>
+                            </div>
+                            <div class="menu__wrap__sub__price">
+                                <span>22€</span>
+                            </div>
+                            <div class="menuItem__confirmation">
+                                <div class="menuItem__wrapIcon">
+                                    <i class="menuItem__icon fas fa-check"></i>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="menuItem time-9">
+                            <div class="menu__wrap__sub__name">
+                                <h4>Millefeuille croustillant</h4>
+                                <span>Myrtilles et pâte d’amande </span>
+                            </div>
+                            <div class="menu__wrap__sub__price">
+                                <span>23€</span>
+                            </div>
+                            <div class="menuItem__confirmation">
+                                <div class="menuItem__wrapIcon">
+                                    <i class="menuItem__icon fas fa-check"></i>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </section>
+            </div>
+            <button class="" type="button">Commandez</button>
         </main>
+
         <footer class="footer">
             <div class="footer__container">
                 <h2>ohmyfood</h2>
