--- a/la-note-enchantee.html
+++ b/la-note-enchantee.html
@@ -48,167 +48,175 @@
             </div>
         </div>
         <main class="menu">
-            <section class="menu__sub">
-                <h4>Entrées</h4>
-                <div class="menu__sub__line"></div>
-                <ul>
-                    <li class="menuItem time-1">
-                        <div class="menu__sub__name">
-                            <h4>Ravioles de foie gras</h4>
-                            <span>Accompagnés de leur crème à la truffe</span>
-                        </div>
-                        <div class="menu__sub__price">
-                            <span>25€</span>
-                        </div>
-                        <div class="menuItem__confirmation">
-                            <div class="menuItem__wrapIcon">
-                                <i class="menuItem__icon fas fa-check"></i>
+            <div class="menu__wrap">
+                <section class="menu__wrap__sub">
+                    <h4>Entrées</h4>
+                    <div class="menu__wrap__sub__line"></div>
+                    <ul>
+                        <li class="menuItem time-1">
+                            <div class="menu__wrap__sub__name">
+                                <h4>Ravioles de foie gras</h4>
+                                <span
+                                    >Accompagnés de leur crème à la truffe
+                                </span>
                             </div>
-                        </div>
-                    </li>
-                    <li class="menuItem time-2">
-                        <div class="menu__sub__name">
-                            <h4>Caviar osciètre</h4>
-                            <span>Sur blini à la farine de blé noir</span>
-                        </div>
-                        <div class="menu__sub__price">
-                            <span>35€</span>
-                        </div>
-                        <div class="menuItem__confirmation">
-                            <div class="menuItem__wrapIcon">
-                                <i class="menuItem__icon fas fa-check"></i>
+                            <div class="menu__wrap__sub__price">
+                                <span>25€</span>
                             </div>
-                        </div>
-                    </li>
-                    <li class="menuItem time-3">
-                        <div class="menu__sub__name">
-                            <h4>Homard et espuma de potiron</h4>
-                            <span>Mariné aux zestes d'orange</span>
-                        </div>
-                        <div class="menu__sub__price">
-                            <span>20€</span>
-                        </div>
-                        <div class="menuItem__confirmation">
-                            <div class="menuItem__wrapIcon">
-                                <i class="menuItem__icon fas fa-check"></i>
+                            <div class="menuItem__confirmation">
+                                <div class="menuItem__wrapIcon">
+                                    <i class="menuItem__icon fas fa-check"></i>
+                                </div>
                             </div>
-                        </div>
-                    </li>
-                    <li class="menuItem time-4">
-                        <div class="menu__sub__name">
-                            <h4>Foie gras de canard cuit entier</h4>
-                            <span>Confiture de figue et pain toasté</span>
-                        </div>
-                        <div class="menu__sub__price">
-                            <span>35€</span>
-                        </div>
-                        <div class="menuItem__confirmation">
-                            <div class="menuItem__wrapIcon">
-                                <i class="menuItem__icon fas fa-check"></i>
+                        </li>
+                        <li class="menuItem time-2">
+                            <div class="menu__wrap__sub__name">
+                                <h4>Caviar osciètre</h4>
+                                <span>Sur blini à la farine de blé noir </span>
                             </div>
-                        </div>
-                    </li>
-                </ul>
-            </section>
-            <section class="subMenu menu__sub">
-                <h4>Plats</h4>
-                <div class="menu__sub__line"></div>
-                <ul>
-                    <li class="menuItem time-5">
-                        <div class="menu__sub__name">
-                            <h4>Noix de coquilles Saint-Jacques</h4>
-                            <span>Sur lit de purée de céleri-rave</span>
-                        </div>
-                        <div class="menu__sub__price">
-                            <span>40€</span>
-                        </div>
-                        <div class="menuItem__confirmation">
-                            <div class="menuItem__wrapIcon">
-                                <i class="menuItem__icon fas fa-check"></i>
+                            <div class="menu__wrap__sub__price">
+                                <span>35€</span>
                             </div>
-                        </div>
-                    </li>
-                    <li class="menuItem time-6">
-                        <div class="menu__sub__name">
-                            <h4>Langoustine poêlée</h4>
-                            <span>Purée de patate douce</span>
-                        </div>
-                        <div class="menu__sub__price">
-                            <span>35€</span>
-                        </div>
-                        <div class="menuItem__confirmation">
-                            <div class="menuItem__wrapIcon">
-                                <i class="menuItem__icon fas fa-check"></i>
+                            <div class="menuItem__confirmation">
+                                <div class="menuItem__wrapIcon">
+                                    <i class="menuItem__icon fas fa-check"></i>
+                                </div>
                             </div>
-                        </div>
-                    </li>
-                    <li class="menuItem time-7">
-                        <div class="menu__sub__name">
-                            <h4>Mijoté de queue de boeuf</h4>
-                            <span>Et riz sauvage aux zestes de citron</span>
-                        </div>
-                        <div class="menu__sub__price">
-                            <span>44€</span>
-                        </div>
-                        <div class="menuItem__confirmation">
-                            <div class="menuItem__wrapIcon">
-                                <i class="menuItem__icon fas fa-check"></i>
+                        </li>
+                        <li class="menuItem time-1">
+                            <div class="menu__wrap__sub__name">
+                                <h4>Homard et espuma de potiron</h4>
+                                <span>Mariné aux zestes d'orange </span>
                             </div>
-                        </div>
-                    </li>
-                </ul>
-            </section>
-            <section class="subMenu menu__sub">
-                <h4>Desserts</h4>
-                <div class="menu__sub__line"></div>
-                <ul>
-                    <li class="menuItem time-8">
-                        <div class="menu__sub__name">
-                            <h4>Macaron noisette et chocolat</h4>
-                            <span
-                                >Glace au caramel brun et sel de Guérande</span
-                            >
-                        </div>
-                        <div class="menu__sub__price">
-                            <span>18€</span>
-                        </div>
-                        <div class="menuItem__confirmation">
-                            <div class="menuItem__wrapIcon">
-                                <i class="menuItem__icon fas fa-check"></i>
+                            <div class="menu__wrap__sub__price">
+                                <span>20€</span>
                             </div>
-                        </div>
-                    </li>
-                    <li class="menuItem time-9">
-                        <div class="menu__sub__name">
-                            <h4>Baba au rhum revisité</h4>
-                            <span>Avec son coulis de citron</span>
-                        </div>
-                        <div class="menu__sub__price">
-                            <span>22€</span>
-                        </div>
-                        <div class="menuItem__confirmation">
-                            <div class="menuItem__wrapIcon">
-                                <i class="menuItem__icon fas fa-check"></i>
+                            <div class="menuItem__confirmation">
+                                <div class="menuItem__wrapIcon">
+                                    <i class="menuItem__icon fas fa-check"></i>
+                                </div>
                             </div>
-                        </div>
-                    </li>
-                    <li class="menuItem time-10">
-                        <div class="menu__sub__name">
-                            <h4>Tiramisu</h4>
-                            <span>À la noisette</span>
-                        </div>
-                        <div class="menu__sub__price">
-                            <span>23€</span>
-                        </div>
-                        <div class="menuItem__confirmation">
-                            <div class="menuItem__wrapIcon">
-                                <i class="menuItem__icon fas fa-check"></i>
+                        </li>
+                        <li class="menuItem time-3">
+                            <div class="menu__wrap__sub__name">
+                                <h4>Foie gras de canard cuit entier</h4>
+                                <span>Confiture de figue et pain toasté </span>
                             </div>
-                        </div>
-                    </li>
-                </ul>
-            </section>
+                            <div class="menu__wrap__sub__price">
+                                <span>35€</span>
+                            </div>
+                            <div class="menuItem__confirmation">
+                                <div class="menuItem__wrapIcon">
+                                    <i class="menuItem__icon fas fa-check"></i>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </section>
+                <section class="subMenu menu__wrap__sub">
+                    <h4>Plats</h4>
+                    <div class="menu__wrap__sub__line"></div>
+                    <ul>
+                        <li class="menuItem time-4">
+                            <div class="menu__wrap__sub__name">
+                                <h4>Noix de coquilles Saint-Jacques</h4>
+                                <span>Sur lit de purée de céleri-rave </span>
+                            </div>
+                            <div class="menu__wrap__sub__price">
+                                <span>40€</span>
+                            </div>
+                            <div class="menuItem__confirmation">
+                                <div class="menuItem__wrapIcon">
+                                    <i class="menuItem__icon fas fa-check"></i>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="menuItem time-5">
+                            <div class="menu__wrap__sub__name">
+                                <h4>Langoustine poêlée</h4>
+                                <span>Purée de patate douce </span>
+                            </div>
+                            <div class="menu__wrap__sub__price">
+                                <span>35€</span>
+                            </div>
+                            <div class="menuItem__confirmation">
+                                <div class="menuItem__wrapIcon">
+                                    <i class="menuItem__icon fas fa-check"></i>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="menuItem time-6">
+                            <div class="menu__wrap__sub__name">
+                                <h4>Mijoté de queue de boeuf</h4>
+                                <span
+                                    >Et riz sauvage aux zestes de citron
+                                </span>
+                            </div>
+                            <div class="menu__wrap__sub__price">
+                                <span>44€</span>
+                            </div>
+                            <div class="menuItem__confirmation">
+                                <div class="menuItem__wrapIcon">
+                                    <i class="menuItem__icon fas fa-check"></i>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </section>
+                <section class="subMenu menu__wrap__sub">
+                    <h4>Desserts</h4>
+                    <div class="menu__wrap__sub__line"></div>
+                    <ul>
+                        <li class="menuItem time-7">
+                            <div class="menu__wrap__sub__name">
+                                <h4>Macaron noisette et chocolat</h4>
+                                <span
+                                    >Glace au caramel brun et sel de Guérande
+                                </span>
+                            </div>
+                            <div class="menu__wrap__sub__price">
+                                <span>18€</span>
+                            </div>
+                            <div class="menuItem__confirmation">
+                                <div class="menuItem__wrapIcon">
+                                    <i class="menuItem__icon fas fa-check"></i>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="menuItem time-8">
+                            <div class="menu__wrap__sub__name">
+                                <h4>Baba au rhum revisité</h4>
+                                <span>Avec son coulis de citron </span>
+                            </div>
+                            <div class="menu__wrap__sub__price">
+                                <span>22€</span>
+                            </div>
+                            <div class="menuItem__confirmation">
+                                <div class="menuItem__wrapIcon">
+                                    <i class="menuItem__icon fas fa-check"></i>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="menuItem time-9">
+                            <div class="menu__wrap__sub__name">
+                                <h4>Tarte au citron meringuée</h4>
+                                <span>Déstructurée </span>
+                            </div>
+                            <div class="menu__wrap__sub__price">
+                                <span>23€</span>
+                            </div>
+                            <div class="menuItem__confirmation">
+                                <div class="menuItem__wrapIcon">
+                                    <i class="menuItem__icon fas fa-check"></i>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </section>
+            </div>
+            <button class="" type="button">Commandez</button>
         </main>
+
         <footer class="footer">
             <div class="footer__container">
                 <h2>ohmyfood</h2>
