Fix H2, fix distances

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <title>Ohmyfood - Réservation en ligne</title>
-        <meta name="description" content="" />
+        <meta name="description" content="Réservez le menu qui vous convient" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="stylesheet" href="css/main.css" />
 
@@ -36,7 +36,7 @@
         <!-- Header -->
         <header class="header">
             <div class="header__logo">
-                <img src="images/logo/ohmyfood.png" alt="" />
+                <img src="images/logo/ohmyfood.png" alt="Ohmyfood" />
             </div>
         </header>
         <!-- main -->
@@ -56,7 +56,7 @@
         </div>
         <section class="engineNotice">
             <div class="engineNotice__wrap">
-                <h1>Fonctionnement</h1>
+                <h2>Fonctionnement</h2>
                 <ol>
                     <li>
                         <div class="engineNotice__li__icn">
@@ -82,7 +82,7 @@
 
         <section class="resto">
             <div class="resto__wrap">
-                <h1>Restaurants</h1>
+                <h2>Restaurants</h2>
                 <div class="resto__item resto_new">
                     <a href="la-palette-du-gout.html">
                         <div class="resto__item__pic">
