--- a/index.html
+++ b/index.html
@@ -35,14 +35,15 @@
         <!-- Header -->
         <header class="header">
             <div class="header__logo">
-                <img src="images/logo/ohmyfood.png" alt="Ohmyfood" />
+                <a href="./"><span>ohmyfood</span></a>
+            </div>
+            <div class="cityMapping">
+                <i class="fas fa-map-marker-alt"></i>
+                <p>Paris, Belleville</p>
             </div>
         </header>
         <!-- main -->
-        <div class="cityMapping">
-            <i class="fas fa-map-marker-alt"></i>
-            <p>Paris, Belleville</p>
-        </div>
+
         <div class="cityOptions">
             <h1>Réservez le menu qui vous convient</h1>
             <p>
