--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -28,7 +28,7 @@
                 <a href="./"><i class="fas fa-arrow-left"></i></a>
             </div>
             <div class="header__logo">
-                <img src="images/logo/ohmyfood.png" alt="Ohmyfood" />
+                <a href="./"><span>ohmyfood</span></a>
             </div>
         </header>
         <div class="restoMain">
