--- a/la-note-enchantee.html
+++ b/la-note-enchantee.html
@@ -7,7 +7,6 @@
         <meta name="description" content="" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="stylesheet" href="css/style.css" />
-
         <link
             rel="stylesheet"
             href="https://fonts.googleapis.com/css?family=Shrikhand"
@@ -29,7 +28,9 @@
                 <a href="./"><i class="fas fa-arrow-left"></i></a>
             </div>
             <div class="header__logo">
-                <img src="images/logo/ohmyfood.png" alt="Ohmyfood" />
+                <div class="header__logo">
+                    <a href="./"><span>ohmyfood</span></a>
+                </div>
             </div>
         </header>
         <div class="restoMain">
