Wrap header + shadowbox

--- a/index.html
+++ b/index.html
@@ -34,12 +34,14 @@
         </div>
         <!-- Header -->
         <header class="header">
-            <div class="header__logo">
-                <a href="./"><span>ohmyfood</span></a>
-            </div>
-            <div class="cityMapping">
-                <i class="fas fa-map-marker-alt"></i>
-                <p>Paris, Belleville</p>
+            <div class="header__wrap">
+                <div class="header__wrap__logo">
+                    <a href="./"><span>ohmyfood</span></a>
+                </div>
+                <div class="header__wrap__cityMapping">
+                    <i class="fas fa-map-marker-alt"></i>
+                    <p>Paris, Belleville</p>
+                </div>
             </div>
         </header>
         <!-- main -->
