--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -24,11 +24,13 @@
     </head>
     <body>
         <header class="header">
-            <div class="header__btn-back">
-                <a href="./"><i class="fas fa-arrow-left"></i></a>
-            </div>
-            <div class="header__logo">
-                <a href="./"><span>ohmyfood</span></a>
+            <div class="header__wrap">
+                <div class="header__btn-back">
+                    <a href="./"><i class="fas fa-arrow-left"></i></a>
+                </div>
+                <div class="header__wrap__logo">
+                    <a href="./"><span>ohmyfood</span></a>
+                </div>
             </div>
         </header>
         <div class="restoMain">
