IMGs 1920 optimisation + 676 px size + webp

--- a/Le-delice-des-sens.html
+++ b/Le-delice-des-sens.html
@@ -35,10 +35,18 @@
         </header>
         <div class="restoMain">
             <div class="restoMain__pic">
-                <img
-                    src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
-                    alt="Le délice des sens"
-                />
+                <picture>
+                    <source
+                        srcset="
+                            images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.webp
+                        "
+                        type="image/webp"
+                    />
+                    <img
+                        src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                        alt=""
+                    />
+                </picture>
                 <div class="restoMain__bottombar"></div>
             </div>
 
