--- a/a-la-française.html
+++ b/a-la-française.html
@@ -35,10 +35,15 @@
         </header>
         <div class="restoMain">
             <div class="restoMain__pic">
-                <img
-                    src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
-                    alt="À la française"
-                />
+                <picture>
+                    <source
+                        src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.webp"
+                        type="image/webp"
+                    />
+                    <img
+                        src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+                    />
+                </picture>
                 <div class="restoMain__bottombar"></div>
             </div>
 
