--- a/index.html
+++ b/index.html
@@ -88,10 +88,18 @@
                 <div class="resto__item resto_new">
                     <a href="la-palette-du-gout.html">
                         <div class="resto__item__pic">
-                            <img
-                                src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
-                                alt=""
-                            />
+                            <picture>
+                                <source
+                                    srcset="
+                                        images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash676.webp
+                                    "
+                                    type="image/webp"
+                                />
+                                <img
+                                    src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash676.jpg"
+                                    alt="La palette du gout"
+                                />
+                            </picture>
                             <div class="resto__item__pic__label">
                                 <span>Nouveau</span>
                             </div>
@@ -118,10 +126,18 @@
                 <div class="resto__item resto_new">
                     <a href="la-note-enchantee.html">
                         <div class="resto__item__pic">
-                            <img
-                                src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
-                                alt=""
-                            />
+                            <picture>
+                                <source
+                                    srcset="
+                                        images/restaurants/stil-u2Lp8tXIcjw-unsplash676.webp
+                                    "
+                                    type="image/webp"
+                                />
+                                <img
+                                    src="images/restaurants/stil-u2Lp8tXIcjw-unsplash676.jpg"
+                                    alt="La note enchantée"
+                                />
+                            </picture>
                             <div class="resto__item__pic__label">
                                 <span>Nouveau</span>
                             </div>
@@ -148,10 +164,18 @@
                 <div class="resto__item">
                     <a href="a-la-française.html">
                         <div class="resto__item__pic">
-                            <img
-                                src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
-                                alt=""
-                            />
+                            <picture>
+                                <source
+                                    srcset="
+                                        images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash676.webp
+                                    "
+                                    type="image/webp"
+                                />
+                                <img
+                                    src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash676.jpg"
+                                    alt="À la française"
+                                />
+                            </picture>
                         </div>
                     </a>
                     <div class="resto__item__bar">
@@ -175,10 +199,18 @@
                 <div class="resto__item">
                     <a href="Le-delice-des-sens.html">
                         <div class="resto__item__pic">
-                            <img
-                                src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
-                                alt=""
-                            />
+                            <picture>
+                                <source
+                                    srcset="
+                                        images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash676.webp
+                                    "
+                                    type="image/webp"
+                                />
+                                <img
+                                    src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash676.jpg"
+                                    alt="Le délice des sens"
+                                />
+                            </picture>
                         </div>
                     </a>
                     <div class="resto__item__bar">
