--- a/la-note-enchantee.html
+++ b/la-note-enchantee.html
@@ -35,10 +35,18 @@
         </header>
         <div class="restoMain">
             <div class="restoMain__pic">
-                <img
-                    src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
-                    alt="La note enchantée"
-                />
+                <picture>
+                    <source
+                        srcset="
+                            images/restaurants/stil-u2Lp8tXIcjw-unsplash.webp
+                        "
+                        type="image/webp"
+                    />
+                    <img
+                        src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+                        alt=""
+                    />
+                </picture>
                 <div class="restoMain__bottombar"></div>
             </div>
 
