Images naming, same ratio, compression

--- a/a-la-française.html
+++ b/a-la-française.html
@@ -37,11 +37,14 @@
             <div class="restoMain__pic">
                 <picture>
                     <source
-                        src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.webp"
+                        srcset="
+                            images/restaurants/toa-heftiba-A_la_francaise-1920.webp
+                        "
                         type="image/webp"
                     />
                     <img
-                        src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+                        src="images/restaurants/toa-heftiba-A_la_francaise-1920.jpg"
+                        alt="À la française"
                     />
                 </picture>
                 <div class="restoMain__bottombar"></div>
